<resources>
    <string name="app_name">Map Chat</string>

    <!-- Login -->
    <string name="login_btn_sign_in">Sign In</string>
    <string name="toast_sign_in_cancelled">Sign in was cancelled.</string>
    <string name="toast_no_internet">Unable to sign in without Internet</string>
    <string name="toast_unexpected_error">An Unknown Error Occured</string>
    <string name="toast_signout_success">Signed out successfully.</string>
    <string name="toast_delete_success">Account deleted successfully.</string>
    <string name="toast_delete_failed">Failed to delete account.</string>

    <!-- Drawer -->
    <string name="drawer_title">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_closed">Closed</string>
    <string name="drawer_go_to_location">Go To Location</string>
    <string name="drawer_map_theme">Map Theme</string>
    <string name="drawer_delete_messages">Remove My Messages</string>
    <string name="drawer_sign_out">Sign Out</string>
    <string name="drawer_delete_account">Delete Account</string>
    <string name="drawer_delete_dialog_title">Delete Account</string>
    <string name="drawer_delete_dialog_message">This will delete your account and any messages that you\'ve dropped.</string>
    <string name="drawer_delete_messages_title">Are you sure?</string>
    <string name="drawer_delete_messages_message">This will delete all messages that you\'ve dropped.</string>

    <!-- Map Fragment -->
    <string name="map_fragment_toast_delete_error">Cannot delete another user\'s message.</string>

    <!-- Map Style Select -->
    <string name="map_style_window_title">Select Map Style</string>

    <!-- Write Message Activity -->
    <string name="write_message_window_title">New Message</string>
    <string name="write_message_btn_done">Drop</string>
    <string name="write_message_btn_cancel">Cancel</string>
    <string name="toast_error_message_empty">Cannot drop an empty message.</string>

    <!-- General -->
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>
