<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:text="@string/drawer_go_to_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/title_white"
        android:gravity="center"/>

    <fragment
        android:id="@+id/place_autocomplete_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"/>

    <Button
        android:layout_margin="10dp"
        android:text="@string/drawer_delete_messages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="deleteMessages"/>

    <Button
        android:layout_margin="10dp"
        android:text="@string/drawer_map_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="selectMapTheme"/>

    <Button
        android:layout_margin="10dp"
        android:text="@string/drawer_sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="signOut"/>

    <Button
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/drawer_delete_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="confirmDelete"
        android:textColor="@color/red_delete"
        style="?android:attr/borderlessButtonStyle"/>

</LinearLayout>